--- a/16x2/config.json
+++ b/16x2/config.json
@@ -2,7 +2,9 @@
     "app": {
         "version": "1.0.8",
 		"NamePlace": "Casa Grande",
-        "pwd":"bytheg2024"
+        "pwd":"bytheg2024",
+		"debugging": true,
+		"show_code": true
         
     },
     "api":{
