--- a/ssd1306/config.json
+++ b/ssd1306/config.json
@@ -2,7 +2,9 @@
     "app": {
         "version": "1.0.8",
 		"NamePlace": "Casa Grande",
-        "pwd":"bytheg2024"
+        "pwd":"bytheg2024",
+		"debugging": true,
+		"show_code": true
         
     },
     "api":{
@@ -92,6 +94,6 @@
 		"gpio_servo_gate_delay" : 5,
 		"keypad_rows" : [21,20,16,12],
 		"keypad_cols" : [7,8,25,24],
-		"buzzer" : 22
+		"buzzer" : 4
 	}
 }
