keypad added oled.128x32

--- a/config.json
+++ b/config.json
@@ -43,8 +43,10 @@
         "cols":16,
         "lines" : 2,
         "backlight":1,
-		"width":128,
+        "_comment1":"top items are use for lcd type screen",
+        "width":128,
 		"height":32,
+        "_comment2":"top items are use for oled type screen",
 		"display_type":"lcd.16x2",
 		"image64" : "./assets/bytheg_128x128.png",
 		"image32" : "./assets/Bytheg128.png",
